[package]
name = "pnu-subsystem"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Subsystem traits and message definitions"

[dependencies]
async-std = "1.8.0"
async-trait = "0.1.42"
derive_more = "0.99.11"
futures = "0.3.8"
futures-timer = "3.0.2"
lazy_static = "1.4"
log = "0.4.11"
mick-jaeger = "0.1.2"
parity-scale-codec = { version = "1.3.5", default-features = false, features = ["derive"] }
parking_lot = "0.11.1"
pin-project = "1.0.3"
pnn-protocol = { path = "../network/protocol" }
pnu-jaeger = { path = "../jaeger" }
pnu-primitives = { path = "../primitives" }
polkadot-primitives = { path = "../../primitives" }
polkadot-statement-table = { path = "../../statement-table" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "master" }
smallvec = "1.6.0"
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "master" }
thiserror = "1.0.23"
tracing = "0.1.22"

[dev-dependencies]
assert_matches = "1.4.0"
async-trait = "0.1.42"
futures = { version = "0.3.8", features = ["thread-pool"] }
pnu-subsystem-test-helpers = { path = "../subsystem-test-helpers" }
