[package]
name = "pnn-protocol"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Primitives types for the Node-side"

[dependencies]
pdot-primitives = { path = "../../../primitives" }
pnu-primitives = { path = "../../primitives" }
pnu-jaeger = { path = "../../jaeger" }
parity-scale-codec = { version = "1.3.5", default-features = false, features = ["derive"] }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "master" }
